cka-prep/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
  - name: app-container
    image: busybox:1.28.4
    command: ['sh', '-c', "echo $(MY_VAR) && sleep 3600"]
