cka-prep/pod2-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"pod2","namespace":"default"},"spec":{"containers":[{"command":["sh","-c","echo \"I've had enough\" \u003e /var/termination-reason ; exit 1"],"image":"busybox","name":"main","terminationMessagePath":"/var/termination-reason"}]}}
  creationTimestamp: null
  name: pod2
  selfLink: /api/v1/namespaces/default/pods/pod2
spec:
  containers:
    image: busybox
    imagePullPolicy: Always
    name: main
    resources: {}
    terminationMessagePath: /var/termination-reason
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-9whxr
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: pitshou2c.mylabserver.com
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-9whxr
    secret:
      defaultMode: 420
      secretName: default-token-9whxr
status:
  phase: Pending
  qosClass: BestEffort
