cka-prep/readiness.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxr
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginxr
---
apiVersion: v1
kind: Pod
metadata:
  name: nginxrd
  labels:
    app: nginxr
spec:
  containers:
  - name: nginxc
    image: nginx
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
---
apiVersion: v1
kind: Pod
metadata:
  name: nginxpd
  labels:
    app: nginxr
spec:
  containers:
  - name: nginxc
    image: nginx:191
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
